--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,6 +1,9 @@
-{% extends 'base1.html' %}
+{% extends 'base_reg.html' %}
 {% block title %}Registros{% endblock %}
 {% block content %}
+    <form method="POST" action="submit">
+    {% csrf_token %}
+    <input type="number" class="form-control" name="cliente-id" value="{{ cliente.id }}" hidden>
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="card mx-4">
@@ -13,7 +16,7 @@
                             <i class="icon-user"></i>
                         </span>
                     </div>
-                    <input class="form-control" type="text" placeholder="Nome">
+                    <input class="form-control" type="text" placeholder="Nome" name="nome" value="{{ cliente.nome }}">
                 </div>
 
                 <div class="input-group mb-3">
@@ -22,7 +25,7 @@
                             <i class="icon-lock"></i>
                         </span>
                     </div>
-                    <input class="form-control" type="text" placeholder="CPF">
+                    <input class="form-control" type="text" placeholder="CPF" name="cpf" value="{{ cliente.cpf }}">
                 </div>
 
                 <div class="input-group mb-3">
@@ -31,7 +34,7 @@
                     <i class="icon-lock"></i>
                   </span>
                 </div>
-                    <input class="form-control" type="text" placeholder="Telefone">
+                    <input class="form-control" type="text" placeholder="Telefone" name="telefone" value="{{ cliente.telefone }}">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -39,20 +42,27 @@
                     <i class="icon-lock"></i>
                   </span>
                 </div>
-                    <input class="form-control" type="text" placeholder="Endereço">
+                    <input class="form-control" type="text" placeholder="Endereço" name="endereco" value="{{ cliente.endereco }}">
                 </div>
 
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">@</span>
                 </div>
-                <input class="form-control" type="text" placeholder="Email">
+                <input class="form-control" type="text" placeholder="Email" name="email" value="{{ cliente.email }}">
               </div>
 
-              <button class="btn btn-block btn-success" type="button">Cadastra dados</button>
+              <button class="btn btn-block btn-success" type="submit">
+                  {% if cliente %}
+                  Alterar dados
+                  {% else %}
+                  Cadastrar dados
+                  {% endif %}
+              </button>
             </div>
 
           </div>
         </div>
       </div>
+    </form>
 {% endblock %}
